--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,6 @@ body {
   letter-spacing: 0.1em;
   background-color: #020e16;
   color: #ffffff;
-
   background-image: url("/img/blur.png");
   background-size: cover;
   background-attachment: fixed;
@@ -35,19 +34,17 @@ img {
 }
 
 .visually-hidden:not(:focus):not(:active),
-input[type="checkbox"].visually-hidden,
-input[type="radio"].visually-hidden {
+input[type=checkbox].visually-hidden,
+input[type=radio].visually-hidden {
   position: absolute;
-
   width: 1px;
   height: 1px;
   margin: -1px;
   border: 0;
   padding: 0;
-
   white-space: nowrap;
-
-  clip-path: inset(100%);
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
   clip: rect(0, 0, 0, 0);
   overflow: hidden;
 }
@@ -60,10 +57,24 @@ input[type="radio"].visually-hidden {
   line-height: 24px;
   border: none;
   color: #2b5876;
-
   background: #ffc046;
   box-shadow: inset 7px 0px 10px rgba(0, 0, 0, 0.25);
   border-radius: 25px;
+}
+
+.container {
+  width: 1070px;
+  height: auto;
+  margin: 0 10% 0 15%;
+}
+
+h2 {
+  position: relative;
+  font-size: 40px;
+  line-height: 53px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 120px;
 }
 
 header {
@@ -71,49 +82,41 @@ header {
   height: 100vh;
   float: left;
   position: fixed;
-
   background: linear-gradient(#2b5876 0%, #4e4376 100%);
 }
 
 .rail-navigation {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   gap: 100px;
 }
 
 .page-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   position: relative;
   width: 65px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   gap: 30px;
 }
-
 .page-buttons::before {
   content: "";
-
   position: relative;
-
   background-image: url("/img/arrow.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
-
   width: 10px;
   height: 50px;
 }
-
 .page-buttons::after {
   content: "";
-
   position: relative;
-
   background-image: url("/img/arrow.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
-
   width: 10px;
   height: 50px;
   transform: rotate(180deg);
@@ -128,7 +131,6 @@ header {
   display: flex;
   transition: background-color 0.5s ease;
 }
-
 .dot:hover {
   background: #ffffff;
 }
@@ -142,16 +144,15 @@ header {
   display: flex;
   transition: background-color 0.5s ease;
 }
-
 .dot-active:hover {
   background: #cd8a04;
 }
 
 .social-media-header {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   padding: 0px;
   gap: 30px;
 }
@@ -161,19 +162,12 @@ header {
   cursor: pointer;
 }
 
-.container {
-  width: 1070px;
-  height: auto;
-  margin: 0 10% 0 15%;
-}
-
 .logo {
   position: fixed;
   cursor: pointer;
   z-index: 2;
 }
-
-.logo:hover {
+.logo :hover {
   opacity: 0.7;
 }
 
@@ -201,8 +195,7 @@ header {
   letter-spacing: 0.1em;
   color: #ffffff;
 }
-
-.main-screen-heading::after {
+.main-screen-heading ::after {
   content: "";
   position: absolute;
   height: 3px;
@@ -252,8 +245,7 @@ header {
   bottom: 10%;
   left: 50%;
 }
-
-.scroll:hover {
+.scroll :hover {
   opacity: 0.7;
   cursor: pointer;
 }
@@ -272,22 +264,12 @@ header {
 .features-card {
   position: relative;
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
   padding: 0px;
   gap: 80px;
-
   width: 370px;
-}
-
-h2 {
-  position: relative;
-  font-size: 40px;
-  line-height: 53px;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 120px;
 }
 
 .features-heading:after {
@@ -311,9 +293,7 @@ h2 {
   content: "";
   position: absolute;
   left: -35px;
-
   background-image: url("/img/circle.png");
-
   width: 165px;
   height: 165px;
 }
@@ -325,7 +305,6 @@ h2 {
   height: 23px;
   left: -15px;
   top: 30px;
-
   background: #ffc046;
   box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 50%;
@@ -338,7 +317,6 @@ h2 {
   height: 23px;
   left: 105px;
   top: 110px;
-
   background: #ffc046;
   box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 50%;
@@ -351,7 +329,6 @@ h2 {
   height: 23px;
   left: -35px;
   bottom: 50px;
-
   background: #ffc046;
   box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 50%;
@@ -364,13 +341,10 @@ h2 {
   height: 23px;
   left: 40px;
   bottom: 5px;
-
   background: #ffc046;
   box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 50%;
 }
-
-/* cards */
 
 .services-heading:after {
   content: "";
@@ -406,7 +380,7 @@ h2 {
   transition: transform 0.6s;
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 0px 25px 25px 0px;
+  border-radius: 25px;
 }
 
 .services-card:hover .services-flip {
@@ -430,13 +404,12 @@ h2 {
   transform: rotateY(180deg);
   color: #020e16;
   background-color: #ffffff;
-  border-radius: 25px 0px 0px 25px;
+  border-radius: 25px;
 }
 
 .card-back-title {
   font-size: 28px;
   line-height: 27px;
-
   text-align: center;
   color: #2b5876;
 }
@@ -448,7 +421,7 @@ h2 {
 }
 
 .card-back-button {
-  border-radius: 0 0 0 25px;
+  border-radius: 0 0 25px 25px;
   cursor: pointer;
 }
 
@@ -468,22 +441,16 @@ h2 {
   display: flex;
   justify-content: center;
   overflow: hidden;
-  border-radius: 0px 25px 25px 0px;
+  border-radius: 25px;
 }
-
-.card-front:after {
+.card-front::after {
   position: absolute;
   content: "";
   width: 291px;
   height: 369px;
   left: 0px;
   top: 0px;
-
-  background: linear-gradient(
-    181.37deg,
-    rgba(2, 14, 22, 0) 1.16%,
-    rgba(2, 14, 22, 0.8) 98.83%
-  );
+  background: linear-gradient(181.37deg, rgba(2, 14, 22, 0) 1.16%, rgba(2, 14, 22, 0.8) 98.83%);
 }
 
 .services-title {
@@ -492,7 +459,6 @@ h2 {
   bottom: 30px;
   width: 180px;
   font-size: 20px;
-
   text-align: center;
   z-index: 1;
 }
@@ -501,7 +467,6 @@ h2 {
   position: absolute;
   bottom: 0px;
   right: 0px;
-
   width: 0;
   height: 0;
   border-left: 70px solid transparent;
@@ -510,14 +475,12 @@ h2 {
   z-index: 1;
   cursor: pointer;
 }
-
-.expand-button:after {
+.expand-button::after {
   content: "";
   position: absolute;
   right: 8px;
   bottom: -57px;
-
   background-image: url("/img/arrow-open.svg");
   width: 26px;
   height: 26px;
-}
+}/*# sourceMappingURL=style.css.map */
