Main screen animation added

--- a/styles/blocks/_main-screen.scss
+++ b/styles/blocks/_main-screen.scss
@@ -62,6 +62,17 @@
   position: absolute;
   right: -100px;
   bottom: 40px;
+
+  animation: spin 15s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .medium-figure {
@@ -69,6 +80,8 @@
   right: 100px;
   bottom: 450px;
   transform: rotate(150deg);
+
+  animation: spin 10s linear infinite;
 }
 
 .small-figure {
@@ -76,6 +89,8 @@
   right: -60px;
   bottom: 420px;
   transform: rotate(5deg);
+
+  animation: spin 10s linear infinite;
 }
 
 .scroll {
@@ -83,7 +98,7 @@
   bottom: 10%;
   left: 50%;
 
-  & :hover {
+  &:hover {
     opacity: 0.7;
     cursor: pointer;
   }
