--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,3 +6,4 @@
 @import "blocks/_main-screen.scss";
 @import "blocks/_features.scss";
 @import "blocks/_services.scss";
+@import "blocks/_contact.scss";
