Added "Contact" Section

--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -69,7 +69,7 @@ header {
   transition: background-color 0.5s ease;
 
   &:hover {
-    background: #cd8a04;
+    background: $dark-yellow;
   }
 }
 
