--- a/styles/blocks/_scaffolding.scss
+++ b/styles/blocks/_scaffolding.scss
@@ -64,6 +64,15 @@ input[type="radio"].visually-hidden {
   background: $yellow;
   box-shadow: inset 7px 0px 10px rgba(0, 0, 0, 0.25);
   border-radius: 25px;
+  transition: background-color 0.5s ease;
+
+  &:hover {
+    background: $dark-yellow;
+  }
+
+  &:active {
+    transform: scale(0.9);
+  }
 }
 
 .container {
