--- a/styles/blocks/_contact.scss
+++ b/styles/blocks/_contact.scss
@@ -38,6 +38,7 @@
   height: 50px;
   padding: 15px;
   background: rgba(255, 255, 255, 0.4);
+  font-size: 16px;
   color: #fff;
   border-radius: 20px;
   border: none;
@@ -48,7 +49,8 @@
   }
 
   &:focus {
-    background: rgba(255, 255, 255, 0.863);
+    background: rgba(255, 255, 255, 0.585);
+    color: #000;
 
     &::placeholder {
       color: $bg-color;
