--- a/styles/style.css
+++ b/styles/style.css
@@ -93,11 +93,13 @@ header {
 }
 
 .rail-navigation {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 100px;
+  padding: 30px 0;
+  gap: 80px;
 }
 
 .page-buttons {
@@ -168,10 +170,153 @@ header {
   cursor: pointer;
 }
 
+:root {
+  --menu-speed: 0.75s;
+}
+
+/* MENU STYLES */
+.toggler {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  opacity: 0;
+}
+
+.menu-wrap .hamburger {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 60px;
+  height: 60px;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Hamburger Line */
+.menu-wrap .hamburger > div {
+  position: relative;
+  flex: none;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.4s ease;
+}
+
+/* Hamburger Lines - Top & Bottom */
+.menu-wrap .hamburger > div::before,
+.menu-wrap .hamburger > div::after {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  top: -10px;
+  width: 100%;
+  height: 2px;
+  background: inherit;
+}
+
+/* Moves Line Down */
+.menu-wrap .hamburger > div::after {
+  top: 10px;
+}
+
+/* Toggler Animation */
+.menu-wrap .toggler:checked + .hamburger > div {
+  transform: rotate(135deg);
+}
+
+/* Turns Lines Into X */
+.menu-wrap .toggler:checked + .hamburger > div:before,
+.menu-wrap .toggler:checked + .hamburger > div:after {
+  top: 0;
+  transform: rotate(90deg);
+}
+
+/* Rotate On Hover When Checked */
+.menu-wrap .toggler:checked:hover + .hamburger > div {
+  transform: rotate(225deg);
+}
+
+/* Show Menu */
+.menu-wrap .toggler:checked ~ .menu {
+  visibility: visible;
+}
+
+.menu-wrap .toggler:checked ~ .menu > div {
+  transform: scale(1);
+  transition-duration: var(--menu-speed);
+}
+
+.menu-wrap .toggler:checked ~ .menu-links {
+  opacity: 1;
+  transition: opacity 0.4s ease 0.4s;
+}
+
+.menu-wrap .menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu-wrap .menu-background {
+  background: linear-gradient(112.9deg, #2b5876 0%, #4e4376 100%);
+  width: 200vw;
+  height: 200vw;
+  display: flex;
+  flex: none;
+  align-items: center;
+  justify-content: center;
+  transform: scale(0);
+  transition: all 0.4s ease;
+}
+
+.menu-wrap .menu > div > div {
+  text-align: center;
+  max-width: 90vw;
+  max-height: 100vh;
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+
+.link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 20px;
+  padding: 30px;
+}
+
+.link > a {
+  color: #2b5876;
+  background-color: #ffc046;
+  text-decoration: none;
+  padding: 15px 30px;
+  border-radius: 10px;
+  transition: color 0.4s ease;
+  cursor: pointer;
+}
+
 .logo {
   position: fixed;
   cursor: pointer;
-  z-index: 2;
+  z-index: 1;
 }
 .logo :hover {
   opacity: 0.7;
@@ -556,6 +701,7 @@ header {
   height: 50px;
   padding: 15px;
   background: rgba(255, 255, 255, 0.4);
+  font-size: 16px;
   color: #fff;
   border-radius: 20px;
   border: none;
@@ -573,7 +719,8 @@ header {
   opacity: 0.6;
 }
 .input:focus {
-  background: rgba(255, 255, 255, 0.863);
+  background: rgba(255, 255, 255, 0.585);
+  color: #000;
 }
 .input:focus::-moz-placeholder {
   color: #020e16;
