Web design page added + service description styled

--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -207,6 +207,7 @@ header {
   position: relative;
   background: none;
   font-size: 20px;
+  left: -20px;
   width: 300px;
   border: none;
   cursor: pointer;
