--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,3 +8,4 @@
 @import "blocks/_services.scss";
 @import "blocks/_contact.scss";
 @import "blocks/_footer.scss";
+@import "blocks/_service-section.scss";
