Styling service img

--- a/styles/style.css
+++ b/styles/style.css
@@ -883,7 +883,66 @@ footer {
   padding: 180px 0;
 }
 
+.card {
+  position: relative;
+  width: 356px;
+  height: 434px;
+  background: #020e16;
+  border-radius: 100px 0px;
+  transition: 0.5s;
+}
+
+.card .lines {
+  position: absolute;
+  inset: 0;
+  background: #020e16;
+  overflow: hidden;
+  border-radius: 100px 0px;
+}
+.card .lines::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 800px;
+  height: 220px;
+  background: linear-gradient(transparent, #ffc046, #2b5876, #4e4376, transparent);
+  -webkit-animation: animate 7s linear infinite;
+          animation: animate 7s linear infinite;
+}
+.card .lines::after {
+  content: "";
+  position: absolute;
+  inset: 3px;
+  border-radius: 100px 0px;
+  background: #020e16;
+}
+
+@-webkit-keyframes animate {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
+@keyframes animate {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
 .service-photo {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 1;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
   border-radius: 100px 0px;
 }
 
@@ -922,4 +981,5 @@ footer {
 
 .service-features li {
   padding-bottom: 20px;
+  list-style: square;
 }/*# sourceMappingURL=style.css.map */
