--- a/styles/blocks/_service-section.scss
+++ b/styles/blocks/_service-section.scss
@@ -9,9 +9,69 @@
   padding: 180px 0;
 }
 
+// box
+.card {
+  position: relative;
+  width: 356px;
+  height: 434px;
+  background: $bg-color;
+  border-radius: 100px 0px;
+  transition: 0.5s;
+}
+
+.card .lines {
+  position: absolute;
+  inset: 0;
+  background: $bg-color;
+  overflow: hidden;
+  border-radius: 100px 0px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 800px;
+    height: 220px;
+    background: linear-gradient(
+      transparent,
+      $yellow,
+      $green,
+      $purple,
+      transparent
+    );
+    animation: animate 7s linear infinite;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    inset: 3px;
+    border-radius: 100px 0px;
+    background: $bg-color;
+  }
+}
+
+@keyframes animate {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
 .service-photo {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 1;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
   border-radius: 100px 0px;
 }
+// box/end
 
 .service-description {
   width: 690px;
@@ -49,4 +109,5 @@
 
 .service-features li {
   padding-bottom: 20px;
+  list-style: square;
 }
