--- a/styles/blocks/_service-section.scss
+++ b/styles/blocks/_service-section.scss
@@ -9,22 +9,17 @@
   padding: 180px 0;
 }
 
-// box
-.card {
+.animated-photo {
   position: relative;
   width: 356px;
   height: 434px;
-  background: $bg-color;
-  border-radius: 100px 0px;
   transition: 0.5s;
 }
 
-.card .lines {
+.animated-photo .lines {
   position: absolute;
   inset: 0;
-  background: $bg-color;
   overflow: hidden;
-  border-radius: 100px 0px;
 
   &::before {
     content: "";
@@ -33,23 +28,15 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 800px;
-    height: 220px;
+    height: 320px;
     background: linear-gradient(
       transparent,
       $yellow,
-      $green,
-      $purple,
+      $yellow,
+      $yellow,
       transparent
     );
-    animation: animate 7s linear infinite;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    inset: 3px;
-    border-radius: 100px 0px;
-    background: $bg-color;
+    animation: animate 5s linear infinite;
   }
 }
 
@@ -64,14 +51,12 @@
 
 .service-photo {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 5px;
+  left: 5px;
   z-index: 1;
-  width: calc(100% - 20px);
-  height: calc(100% - 20px);
-  border-radius: 100px 0px;
+  width: calc(100% - 10px);
+  height: calc(100% - 10px);
 }
-// box/end
 
 .service-description {
   width: 690px;
