--- a/styles/style.css
+++ b/styles/style.css
@@ -883,40 +883,29 @@ footer {
   padding: 180px 0;
 }
 
-.card {
+.animated-photo {
   position: relative;
   width: 356px;
   height: 434px;
-  background: #020e16;
-  border-radius: 100px 0px;
   transition: 0.5s;
 }
 
-.card .lines {
+.animated-photo .lines {
   position: absolute;
   inset: 0;
-  background: #020e16;
   overflow: hidden;
-  border-radius: 100px 0px;
 }
-.card .lines::before {
+.animated-photo .lines::before {
   content: "";
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 800px;
-  height: 220px;
-  background: linear-gradient(transparent, #ffc046, #2b5876, #4e4376, transparent);
-  -webkit-animation: animate 7s linear infinite;
-          animation: animate 7s linear infinite;
-}
-.card .lines::after {
-  content: "";
-  position: absolute;
-  inset: 3px;
-  border-radius: 100px 0px;
-  background: #020e16;
+  height: 320px;
+  background: linear-gradient(transparent, #ffc046, #ffc046, #ffc046, transparent);
+  -webkit-animation: animate 5s linear infinite;
+          animation: animate 5s linear infinite;
 }
 
 @-webkit-keyframes animate {
@@ -938,12 +927,11 @@ footer {
 }
 .service-photo {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 5px;
+  left: 5px;
   z-index: 1;
-  width: calc(100% - 20px);
-  height: calc(100% - 20px);
-  border-radius: 100px 0px;
+  width: calc(100% - 10px);
+  height: calc(100% - 10px);
 }
 
 .service-description {
