--- a/styles/blocks/_service-section.scss
+++ b/styles/blocks/_service-section.scss
@@ -1,12 +1,11 @@
 .service-section {
-  padding: 60px 0;
-  height: 100vh;
+  padding-top: 60px;
 }
 
 .service-section-wrapper {
   @include flexCenter(row);
   gap: 120px;
-  padding: 180px 0;
+  padding-top: 180px;
 }
 
 .animated-photo {
@@ -95,4 +94,28 @@
 .service-features li {
   padding-bottom: 20px;
   list-style: square;
+}
+
+.price-list {
+  position: relative;
+  margin: 300px 0;
+}
+
+.price-list-heading {
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    height: 3px;
+    width: 120px;
+    left: 444px;
+    bottom: -10px;
+    background: #ffc046;
+  }
+}
+
+.price-list-wrapper {
+  @include flexCenter(row);
+  gap: 100px;
 }
