--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@ html,
 body {
   min-width: 1070px;
   min-height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -454,16 +455,64 @@ header {
           animation: spin 10s linear infinite;
 }
 
-.scroll {
+a#scroll-btn {
   position: absolute;
-  bottom: 10%;
-  left: 50%;
-}
-.scroll:hover {
-  opacity: 0.7;
-  cursor: pointer;
+  height: 40px;
+  width: 25px;
+  border: 1px solid #fff;
+  margin: auto;
+  left: 0;
+  right: 0;
+  bottom: 60px;
+  border-radius: 25px;
 }
 
+a#scroll-btn::before {
+  position: absolute;
+  content: "";
+  margin: auto;
+  top: 5px;
+  left: 0;
+  right: 0;
+  height: 6px;
+  width: 6px;
+  background-color: #fff;
+  border-radius: 50%;
+  -webkit-animation: move-down 2s infinite;
+          animation: move-down 2s infinite;
+}
+
+a#scroll-btn::after {
+  position: absolute;
+  content: "Scroll Down";
+  width: 110px;
+  display: block;
+  text-align: center;
+  left: -40px;
+  bottom: -40px;
+  font-size: 16px;
+  color: #fff;
+}
+
+@-webkit-keyframes move-down {
+  80% {
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+}
+
+@keyframes move-down {
+  80% {
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+}
 .features {
   margin: 200px 0;
 }
