--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,3 +9,4 @@
 @import "blocks/_contact.scss";
 @import "blocks/_footer.scss";
 @import "blocks/_service-section.scss";
+@import "blocks/_price-list.scss";
