--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -18,65 +18,16 @@ header {
   height: 100%;
 }
 
-.page-buttons {
-  @include flexCenter(column);
-  position: relative;
-  width: 65px;
-  gap: 30px;
-
-  &::before {
-    content: "";
-
-    position: relative;
-
-    background-image: url("/img/arrow.svg");
-    background-repeat: no-repeat;
-    background-position: 0 0;
-
-    width: 10px;
-    height: 50px;
-  }
-
-  &::after {
-    content: "";
-
-    position: relative;
-
-    background-image: url("/img/arrow.svg");
-    background-repeat: no-repeat;
-    background-position: 0 0;
-
-    width: 10px;
-    height: 50px;
-    transform: rotate(180deg);
-  }
+.progress-container {
+  width: 5%;
+  height: 50%;
+  background: #fff;
+  border-radius: 10px;
 }
 
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  background: rgba(255, 255, 255, 0.4);
-  border-radius: 50%;
-  display: flex;
-  transition: background-color 0.5s ease;
-  &:hover {
-    background: #ffffff;
-  }
-}
-
-.dot-active {
-  cursor: pointer;
-  height: 20px;
-  width: 20px;
+.progress-bar {
   background: $yellow;
-  border-radius: 50%;
-  display: flex;
-  transition: background-color 0.5s ease;
-
-  &:hover {
-    background: $dark-yellow;
-  }
+  border-radius: 10px;
 }
 
 .social-media-header {
