Link for services section added

--- a/styles/blocks/_services.scss
+++ b/styles/blocks/_services.scss
@@ -74,7 +74,7 @@
 
 .card-back-button {
   border-radius: 0 0 25px 25px;
-  cursor: pointer;
+  padding: 14px 70px;
 
   &:active {
     transform: none;
