--- a/styles/blocks/_scaffolding.scss
+++ b/styles/blocks/_scaffolding.scss
@@ -61,6 +61,7 @@ input[type="radio"].visually-hidden {
   line-height: 24px;
   border: none;
   color: $green;
+  cursor: pointer;
 
   background: $yellow;
   box-shadow: inset 7px 0px 10px rgba(0, 0, 0, 0.25);
