Price list cards styling

--- a/styles/blocks/_price-list.scss
+++ b/styles/blocks/_price-list.scss
@@ -19,7 +19,7 @@
 
 .price-list-wrapper {
   @include flexCenter(row);
-  gap: 230px;
+  gap: 200px;
 }
 
 .price-card {
@@ -32,7 +32,7 @@
     content: "";
 
     position: absolute;
-    left: -60px;
+    left: -47px;
     top: 0;
     background-image: url("/img/pricetag.png");
     background-repeat: no-repeat;
@@ -44,9 +44,28 @@
   }
 }
 
+.solid::before {
+  display: none;
+}
+
+.solid::after {
+  content: "";
+
+  position: absolute;
+  left: -47px;
+  top: 0;
+  background-image: url("/img/pricetag-solid.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+
+  width: 252px;
+  height: 497px;
+  z-index: -1;
+}
+
 .price-card-name,
 .price-card-number {
-  padding-bottom: 30px;
+  padding-bottom: 50px;
   color: $yellow;
   font-size: 32px;
   font-weight: bold;
@@ -54,6 +73,11 @@
 
 .dollar {
   color: $yellow;
+}
+
+.price-card-features {
+  text-align: initial;
+  padding: 35px 0 0 33px;
 }
 
 .price-feature {
