--- a/styles/style.css
+++ b/styles/style.css
@@ -65,7 +65,7 @@ input[type=radio].visually-hidden {
   transition: background-color 0.5s ease;
 }
 .primary-button:hover {
-  background: #fea700;
+  background: #ab7a1b;
 }
 .primary-button:active {
   transform: scale(0.9);
@@ -236,7 +236,7 @@ header {
   cursor: pointer;
 }
 .nav-link-active:hover {
-  background: #fea700;
+  background: #ab7a1b;
 }
 .nav-link-active:active {
   transform: scale(0.9);
@@ -1075,4 +1075,43 @@ footer {
 
 .faded {
   opacity: 0.4;
+}
+
+.ribbon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  bottom: -50px;
+  right: -57px;
+  width: 120px;
+  height: 120px;
+  overflow: hidden;
+}
+.ribbon::before {
+  content: "Best Value";
+  position: absolute;
+  width: 150%;
+  height: 35px;
+  background: #ffc046;
+  transform: rotate(-45deg) translateY(20px);
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 900;
+  color: #2b5876;
+}
+.ribbon::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 10px;
+  height: 10px;
+  background: #ab7a1b;
+  z-index: -1;
+  box-shadow: 110px -107px #ab7a1b;
 }/*# sourceMappingURL=style.css.map */
