--- a/styles/style.css
+++ b/styles/style.css
@@ -970,7 +970,7 @@ footer {
 .service-features {
   display: flex;
   gap: 150px;
-  padding-top: 100px;
+  padding: 80px 20px;
 }
 
 .service-features li {
