Message Form change

--- a/styles/blocks/_contact.scss
+++ b/styles/blocks/_contact.scss
@@ -1,5 +1,4 @@
 .contact {
-  position: relative;
   @include flexCenter(column);
   margin: 300px 0;
 }
@@ -14,11 +13,49 @@
   background: $yellow;
 }
 
+.form-wrap {
+  position: relative;
+  height: 500px;
+  top: 0;
+  overflow: hidden;
+  transition: all 1s ease-in-out 0.3s;
+}
+
+.form-wrap:before {
+  content: "";
+  position: absolute;
+  bottom: 128px;
+  left: 0px;
+  background: url("/img/before.png") no-repeat;
+  height: 317px;
+  width: 809px;
+}
+
+.form-wrap:after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  background: url("/img/after.png") no-repeat;
+  height: 259px;
+  width: 809px;
+}
+
+.form-wrap:hover {
+  height: 830px;
+  top: -220px;
+}
+
 .contact-form {
+  position: relative;
+  top: 200px;
+  overflow: hidden;
+  transition: all 1s ease-in-out 0.3s;
+  width: 550px;
+  height: 450px;
+
   display: flex;
   flex-direction: column;
-  width: 550px;
-  height: auto;
   padding: 55px;
   padding-bottom: 150px;
 
@@ -31,6 +68,10 @@
   backdrop-filter: blur(200px);
   border-radius: 25px;
   row-gap: 30px;
+}
+
+.form-wrap:hover form {
+  height: 530px;
 }
 
 .input {
