--- a/styles/style.css
+++ b/styles/style.css
@@ -374,17 +374,7 @@ header {
   position: absolute;
   right: -100px;
   bottom: 40px;
-  -webkit-animation: spin 15s linear infinite;
-          animation: spin 15s linear infinite;
-}
-
-@-webkit-keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+  animation: spin 15s linear infinite;
 }
 
 @keyframes spin {
@@ -400,8 +390,7 @@ header {
   right: 100px;
   bottom: 450px;
   transform: rotate(150deg);
-  -webkit-animation: spin 10s linear infinite;
-          animation: spin 10s linear infinite;
+  animation: spin 10s linear infinite;
 }
 
 .small-figure {
@@ -409,8 +398,7 @@ header {
   right: -60px;
   bottom: 420px;
   transform: rotate(5deg);
-  -webkit-animation: spin 10s linear infinite;
-          animation: spin 10s linear infinite;
+  animation: spin 10s linear infinite;
 }
 
 a#scroll-btn {
@@ -436,8 +424,7 @@ a#scroll-btn::before {
   width: 6px;
   background-color: #fff;
   border-radius: 50%;
-  -webkit-animation: move-down 2s infinite;
-          animation: move-down 2s infinite;
+  animation: move-down 2s infinite;
 }
 
 a#scroll-btn::after {
@@ -450,16 +437,6 @@ a#scroll-btn::after {
   bottom: -40px;
   font-size: 16px;
   color: #fff;
-}
-
-@-webkit-keyframes move-down {
-  80% {
-    opacity: 0.5;
-  }
-  100% {
-    transform: translateY(20px);
-    opacity: 0;
-  }
 }
 
 @keyframes move-down {
@@ -613,7 +590,6 @@ a#scroll-btn::after {
   position: absolute;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 
@@ -709,7 +685,6 @@ a#scroll-btn::after {
 }
 
 .contact {
-  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -727,11 +702,48 @@ a#scroll-btn::after {
   background: #ffc046;
 }
 
+.form-wrap {
+  position: relative;
+  height: 500px;
+  top: 0;
+  overflow: hidden;
+  transition: all 1s ease-in-out 0.3s;
+}
+
+.form-wrap:before {
+  content: "";
+  position: absolute;
+  bottom: 128px;
+  left: 0px;
+  background: url("/img/before.png") no-repeat;
+  height: 317px;
+  width: 809px;
+}
+
+.form-wrap:after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  background: url("/img/after.png") no-repeat;
+  height: 259px;
+  width: 809px;
+}
+
+.form-wrap:hover {
+  height: 830px;
+  top: -220px;
+}
+
 .contact-form {
+  position: relative;
+  top: 200px;
+  overflow: hidden;
+  transition: all 1s ease-in-out 0.3s;
+  width: 550px;
+  height: 450px;
   display: flex;
   flex-direction: column;
-  width: 550px;
-  height: auto;
   padding: 55px;
   padding-bottom: 150px;
   background: linear-gradient(117.43deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0.1) 100.42%);
@@ -740,6 +752,10 @@ a#scroll-btn::after {
           backdrop-filter: blur(200px);
   border-radius: 25px;
   row-gap: 30px;
+}
+
+.form-wrap:hover form {
+  height: 530px;
 }
 
 .input {
@@ -756,10 +772,6 @@ a#scroll-btn::after {
   color: #fff;
   opacity: 0.6;
 }
-.input:-ms-input-placeholder {
-  color: #fff;
-  opacity: 0.6;
-}
 .input::placeholder {
   color: #fff;
   opacity: 0.6;
@@ -769,10 +781,6 @@ a#scroll-btn::after {
   color: #000;
 }
 .input:focus::-moz-placeholder {
-  color: #020e16;
-  opacity: 0.6;
-}
-.input:focus:-ms-input-placeholder {
   color: #020e16;
   opacity: 0.6;
 }
@@ -819,7 +827,6 @@ a#scroll-btn::after {
   gap: 20px;
   -webkit-user-select: none;
      -moz-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   cursor: pointer;
 }
@@ -910,17 +917,7 @@ footer {
   width: 800px;
   height: 320px;
   background: linear-gradient(transparent, #ffc046, #ffc046, #ffc046, transparent);
-  -webkit-animation: animate 5s linear infinite;
-          animation: animate 5s linear infinite;
-}
-
-@-webkit-keyframes animate {
-  0% {
-    transform: translate(-50%, -50%) rotate(0deg);
-  }
-  100% {
-    transform: translate(-50%, -50%) rotate(360deg);
-  }
+  animation: animate 5s linear infinite;
 }
 
 @keyframes animate {
