--- a/styles/blocks/_price-list.scss
+++ b/styles/blocks/_price-list.scss
@@ -11,7 +11,7 @@
     position: absolute;
     height: 3px;
     width: 120px;
-    left: 444px;
+    right: 48%;
     bottom: -10px;
     background: #ffc046;
   }
