--- a/styles/blocks/_features.scss
+++ b/styles/blocks/_features.scss
@@ -1,5 +1,5 @@
 .features {
-  margin: 200px 0;
+  margin: 12rem 0;
 }
 
 .features-card-wrapper {
@@ -12,27 +12,26 @@
 .features-card {
   position: relative;
   @include flexCenter(row);
-  padding: 0px;
-  gap: 80px;
-
-  width: 370px;
+  padding: 0rem;
+  gap: 5rem;
+  width: 23rem;
 }
 
 .features-heading:after {
   content: "";
   position: absolute;
-  height: 3px;
-  width: 120px;
-  left: 370px;
-  bottom: -10px;
+  height: 0.2rem;
+  width: 7rem;
+  left: 36%;
+  bottom: -1rem;
   background: $yellow;
 }
 
 .features-info {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  width: 350px;
+  gap: 2rem;
+  width: 21rem;
 }
 
 .features-card:before {
@@ -49,51 +48,51 @@
 .features-card--1:after {
   content: "";
   position: absolute;
-  width: 23px;
-  height: 23px;
-  left: -15px;
-  top: 20px;
+  width: 1.5rem;
+  height: 1.5rem;
+  left: -0.2rem;
+  top: 0.8rem;
 
   background: $yellow;
-  box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
   border-radius: 50%;
 }
 
 .features-card--2:after {
   content: "";
   position: absolute;
-  width: 23px;
-  height: 23px;
-  left: 105px;
-  top: 110px;
+  width: 1.5rem;
+  height: 1.5rem;
+  left: 6.4rem;
+  top: 6.9rem;
 
   background: $yellow;
-  box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
   border-radius: 50%;
 }
 
 .features-card--3:after {
   content: "";
   position: absolute;
-  width: 23px;
-  height: 23px;
-  left: -35px;
-  bottom: 50px;
+  width: 1.5rem;
+  height: 1.5rem;
+  left: -2.2rem;
+  bottom: 3.2rem;
 
   background: $yellow;
-  box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
   border-radius: 50%;
 }
 
 .features-card--4:after {
   content: "";
   position: absolute;
-  width: 23px;
-  height: 23px;
-  left: 40px;
-  bottom: 5px;
+  width: 1.5rem;
+  height: 1.5rem;
+  left: 2.5rem;
+  bottom: 0.4rem;
 
   background: $yellow;
-  box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
   border-radius: 50%;
 }
