--- a/styles/blocks/_scaffolding.scss
+++ b/styles/blocks/_scaffolding.scss
@@ -7,7 +7,6 @@
 
 html,
 body {
-  min-width: 1070px;
   min-height: 100%;
   scroll-behavior: smooth;
 }
@@ -15,7 +14,7 @@ body {
 body {
   font-family: "Nunito", sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 1rem;
   letter-spacing: 0.1em;
   background-color: $bg-color;
   color: #ffffff;
@@ -40,9 +39,9 @@ input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
   position: absolute;
 
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+  width: 1rem;
+  height: 1rem;
+  margin: -1rem;
   border: 0;
   padding: 0;
 
@@ -54,18 +53,18 @@ input[type="radio"].visually-hidden {
 }
 
 .primary-button {
-  padding: 14px 77px;
+  padding: 0.8rem 4.8rem;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 1.1rem;
+  line-height: 1.5rem;
   border: none;
   color: $green;
   cursor: pointer;
 
   background: $yellow;
-  box-shadow: inset 7px 0px 10px rgba(0, 0, 0, 0.25);
-  border-radius: 25px;
+  box-shadow: inset 0.4rem 0px 0.6rem rgba(0, 0, 0, 0.25);
+  border-radius: 1.5rem;
   transition: background-color 0.5s ease;
 
   &:hover {
@@ -78,16 +77,31 @@ input[type="radio"].visually-hidden {
 }
 
 .container {
-  width: 1070px;
   height: auto;
-  margin: 0 10% 0 15%;
+  margin: 0 10% 0 10%;
 }
 
 h2 {
   position: relative;
-  font-size: 40px;
-  line-height: 53px;
+  font-size: 2.5rem;
+  line-height: 3.2rem;
   display: flex;
   justify-content: center;
-  margin-bottom: 120px;
+  margin-bottom: 7.5rem;
+  &::after {
+    content: "";
+    position: absolute;
+    height: 0.2rem;
+    width: 12rem;
+    left: 0;
+    bottom: -1rem;
+    background: $yellow;
+  }
+}
+
+@media (max-width: $tablet-width) {
+  .container {
+    width: 38rem;
+    margin: 0 5% 0 10%;
+  }
 }
