--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,6 @@
 
 html,
 body {
-  min-width: 1070px;
   min-height: 100%;
   scroll-behavior: smooth;
 }
@@ -15,7 +14,7 @@ body {
 body {
   font-family: "Nunito", sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 1rem;
   letter-spacing: 0.1em;
   background-color: #020e16;
   color: #ffffff;
@@ -38,9 +37,9 @@ img {
 input[type=checkbox].visually-hidden,
 input[type=radio].visually-hidden {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+  width: 1rem;
+  height: 1rem;
+  margin: -1rem;
   border: 0;
   padding: 0;
   white-space: nowrap;
@@ -51,17 +50,17 @@ input[type=radio].visually-hidden {
 }
 
 .primary-button {
-  padding: 14px 77px;
+  padding: 0.8rem 4.8rem;
   text-transform: uppercase;
   font-weight: 700;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 1.1rem;
+  line-height: 1.5rem;
   border: none;
   color: #2b5876;
   cursor: pointer;
   background: #ffc046;
-  box-shadow: inset 7px 0px 10px rgba(0, 0, 0, 0.25);
-  border-radius: 25px;
+  box-shadow: inset 0.4rem 0px 0.6rem rgba(0, 0, 0, 0.25);
+  border-radius: 1.5rem;
   transition: background-color 0.5s ease;
 }
 .primary-button:hover {
@@ -72,20 +71,34 @@ input[type=radio].visually-hidden {
 }
 
 .container {
-  width: 1070px;
   height: auto;
-  margin: 0 10% 0 15%;
+  margin: 0 10% 0 10%;
 }
 
 h2 {
   position: relative;
-  font-size: 40px;
-  line-height: 53px;
+  font-size: 2.5rem;
+  line-height: 3.2rem;
   display: flex;
   justify-content: center;
-  margin-bottom: 120px;
+  margin-bottom: 7.5rem;
+}
+h2::after {
+  content: "";
+  position: absolute;
+  height: 0.2rem;
+  width: 12rem;
+  left: 0;
+  bottom: -1rem;
+  background: #ffc046;
 }
 
+@media (max-width: 48em) {
+  .container {
+    width: 38rem;
+    margin: 0 5% 0 10%;
+  }
+}
 header {
   position: fixed;
   width: 65px;
@@ -322,37 +335,27 @@ header {
 
 .main-screen {
   position: relative;
-  padding: 60px 0;
+  padding: 2rem 0;
   height: 100vh;
 }
 
 .main-description {
-  width: 690px;
-  padding: 160px 0;
+  padding: 12rem 0;
 }
 
 .subheading {
-  font-size: 12px;
-  line-height: 16px;
+  font-size: 0.8rem;
+  line-height: 1rem;
   letter-spacing: 0.15em;
   color: #ffc046;
 }
 
 .main-screen-heading {
   position: relative;
-  font-size: 40px;
-  line-height: 53px;
+  font-size: 2.5rem;
+  line-height: 3rem;
   letter-spacing: 0.1em;
   color: #ffffff;
-}
-.main-screen-heading ::after {
-  content: "";
-  position: absolute;
-  height: 3px;
-  width: 120px;
-  left: 0;
-  bottom: -10px;
-  background: #ffc046;
 }
 
 .yellow-word {
@@ -360,20 +363,20 @@ header {
 }
 
 .main-screen p {
-  font-size: 16px;
-  line-height: 21px;
-  padding: 50px 0;
-  width: 500px;
+  font-size: 1rem;
+  line-height: 1.3rem;
+  padding: 3.1rem 0;
+  width: 31rem;
 }
 
 .signature {
-  padding-top: 30px;
+  padding-top: 1.8rem;
 }
 
 .large-figure {
   position: absolute;
-  right: -100px;
-  bottom: 40px;
+  right: -6.2rem;
+  bottom: 2.5rem;
   animation: spin 15s linear infinite;
 }
 
@@ -387,41 +390,41 @@ header {
 }
 .medium-figure {
   position: absolute;
-  right: 100px;
-  bottom: 450px;
+  right: 6.2rem;
+  bottom: 28rem;
   transform: rotate(150deg);
   animation: spin 10s linear infinite;
 }
 
 .small-figure {
   position: absolute;
-  right: -60px;
-  bottom: 420px;
+  right: -4rem;
+  bottom: 26rem;
   transform: rotate(5deg);
   animation: spin 10s linear infinite;
 }
 
 a#scroll-btn {
   position: absolute;
-  height: 40px;
-  width: 25px;
-  border: 1px solid #fff;
+  height: 2.5rem;
+  width: 1.6rem;
+  border: 0.1rem solid #fff;
   margin: auto;
   left: 0;
   right: 0;
-  bottom: 60px;
-  border-radius: 25px;
+  bottom: 3.7rem;
+  border-radius: 1.6rem;
 }
 
 a#scroll-btn::before {
   position: absolute;
   content: "";
   margin: auto;
-  top: 5px;
+  top: 0.3rem;
   left: 0;
   right: 0;
-  height: 6px;
-  width: 6px;
+  height: 0.4rem;
+  width: 0.4rem;
   background-color: #fff;
   border-radius: 50%;
   animation: move-down 2s infinite;
@@ -430,12 +433,12 @@ a#scroll-btn::before {
 a#scroll-btn::after {
   position: absolute;
   content: "Scroll Down";
-  width: 110px;
+  width: 7rem;
   display: block;
   text-align: center;
-  left: -40px;
-  bottom: -40px;
-  font-size: 16px;
+  left: -2.5rem;
+  bottom: -2.5rem;
+  font-size: 1rem;
   color: #fff;
 }
 
@@ -449,7 +452,7 @@ a#scroll-btn::after {
   }
 }
 .features {
-  margin: 200px 0;
+  margin: 12rem 0;
 }
 
 .features-card-wrapper {
@@ -465,26 +468,26 @@ a#scroll-btn::after {
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  padding: 0px;
-  gap: 80px;
-  width: 370px;
+  padding: 0rem;
+  gap: 5rem;
+  width: 23rem;
 }
 
 .features-heading:after {
   content: "";
   position: absolute;
-  height: 3px;
-  width: 120px;
-  left: 370px;
-  bottom: -10px;
+  height: 0.2rem;
+  width: 7rem;
+  left: 36%;
+  bottom: -1rem;
   background: #ffc046;
 }
 
 .features-info {
   display: flex;
   flex-direction: column;
-  gap: 30px;
-  width: 350px;
+  gap: 2rem;
+  width: 21rem;
 }
 
 .features-card:before {
@@ -499,48 +502,48 @@ a#scroll-btn::after {
 .features-card--1:after {
   content: "";
   position: absolute;
-  width: 23px;
-  height: 23px;
-  left: -15px;
-  top: 20px;
+  width: 1.5rem;
+  height: 1.5rem;
+  left: -0.2rem;
+  top: 0.8rem;
   background: #ffc046;
-  box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
   border-radius: 50%;
 }
 
 .features-card--2:after {
   content: "";
   position: absolute;
-  width: 23px;
-  height: 23px;
-  left: 105px;
-  top: 110px;
+  width: 1.5rem;
+  height: 1.5rem;
+  left: 6.4rem;
+  top: 6.9rem;
   background: #ffc046;
-  box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
   border-radius: 50%;
 }
 
 .features-card--3:after {
   content: "";
   position: absolute;
-  width: 23px;
-  height: 23px;
-  left: -35px;
-  bottom: 50px;
+  width: 1.5rem;
+  height: 1.5rem;
+  left: -2.2rem;
+  bottom: 3.2rem;
   background: #ffc046;
-  box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
   border-radius: 50%;
 }
 
 .features-card--4:after {
   content: "";
   position: absolute;
-  width: 23px;
-  height: 23px;
-  left: 40px;
-  bottom: 5px;
+  width: 1.5rem;
+  height: 1.5rem;
+  left: 2.5rem;
+  bottom: 0.4rem;
   background: #ffc046;
-  box-shadow: inset 4px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
   border-radius: 50%;
 }
 
@@ -988,7 +991,7 @@ footer {
   position: absolute;
   height: 3px;
   width: 120px;
-  left: 444px;
+  right: 48%;
   bottom: -10px;
   background: #ffc046;
 }
